; ModuleID = '/home/carl/AnghaBench/tmux/extr_options.c_options_get.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_options.c_options_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.options_entry = type { i32 }
%struct.options = type { %struct.options* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.options_entry* @options_get(%struct.options* %0, i8* %1) #0 {
  %3 = alloca %struct.options*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.options_entry*, align 8
  store %struct.options* %0, %struct.options** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load %struct.options*, %struct.options** %3, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = call %struct.options_entry* @options_get_only(%struct.options* %6, i8* %7)
  store %struct.options_entry* %8, %struct.options_entry** %5, align 8
  br label %9

9:                                                ; preds = %19, %2
  %10 = load %struct.options_entry*, %struct.options_entry** %5, align 8
  %11 = icmp eq %struct.options_entry* %10, null
  br i1 %11, label %12, label %23

12:                                               ; preds = %9
  %13 = load %struct.options*, %struct.options** %3, align 8
  %14 = getelementptr inbounds %struct.options, %struct.options* %13, i32 0, i32 0
  %15 = load %struct.options*, %struct.options** %14, align 8
  store %struct.options* %15, %struct.options** %3, align 8
  %16 = load %struct.options*, %struct.options** %3, align 8
  %17 = icmp eq %struct.options* %16, null
  br i1 %17, label %18, label %19

18:                                               ; preds = %12
  br label %23

19:                                               ; preds = %12
  %20 = load %struct.options*, %struct.options** %3, align 8
  %21 = load i8*, i8** %4, align 8
  %22 = call %struct.options_entry* @options_get_only(%struct.options* %20, i8* %21)
  store %struct.options_entry* %22, %struct.options_entry** %5, align 8
  br label %9

23:                                               ; preds = %18, %9
  %24 = load %struct.options_entry*, %struct.options_entry** %5, align 8
  ret %struct.options_entry* %24
}

declare dso_local %struct.options_entry* @options_get_only(%struct.options*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
